third_party/move/move-compiler-v2/tests/visibility-checker/resources_invalid.exp

Diagnostics:
error: Invalid access of field `addr` on external type `objects::ReaderRef`
   ┌─ tests/visibility-checker/resources_invalid.move:17:16
   │
 8 │         borrow_global<T>(ref.addr)
   │                          -------- accessed here
   ·
17 │     public fun get_value(ref: &obj::ReaderRef<Token>): u64 {
   │                ^^^^^^^^^
18 │         obj::reader(ref).val
   │         ---------------- from a call inlined at this callsite
